force-app/main/default/objects/Reference_ORM_Returns__c/Reference_ORM_Returns__c.object-meta.xml
<CustomObject>
    <label>Reference ORM Returns</label>
    <nameField>
        <displayFormat>ORM{000000}</displayFormat>
        <label>Reference ORM Returns Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference ORM Returns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>