force-app/main/default/objects/Reference_ORM_Returns__c/fields/How_many_employees__c.field-meta.xml
<CustomField>
    <fullName>How_many_employees__c</fullName>
    <label>How many employees:</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>