force-app/main/default/objects/Reference_ORM_Returns__c/fields/Withholding_Filing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Withholding_Filing_Frequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Withholding Filing Frequency:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>