force-app/main/default/objects/Reference_ORM_Returns__c/recordTypes/Reference_Prior_to_Paychex.recordType-meta.xml
<RecordType>
    <fullName>Reference_Prior_to_Paychex</fullName>
    <active>true</active>
    <label>Reference Prior to Paychex</label>
</RecordType>